test/attribute/non_str_custom.rs
use dioxus_html_macro::html;

fn main() {
    
    html!(
        <div "custom"={move |_| ()}>
        </div>
    );
}
